--- a/index.html
+++ b/index.html
@@ -18,59 +18,46 @@
   --card-bg:rgba(255,255,255,0.02);
 }
 
-/* Background layers */
-#background-container {position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1;overflow:hidden;}
-.background-1, .background-2 {position:absolute;top:0;left:0;width:100%;height:100%;display:block;background-size:cover;}
+/* Reset */
+body, html{margin:0; padding:0; font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial; color:#e6eef8; background:#0f0f0f;}
+.container{max-width:1100px; margin:0 auto; padding:24px; z-index:2; position:relative;}
 
-/* Container & layout */
-body{
-  margin:0;
-  font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial;
-  color:#e6eef8;
-  position:relative;
-  overflow-x:hidden;
-}
-.container{max-width:1100px;margin:0 auto;padding:24px;display:flex;flex-direction:column;align-items:center;position:relative;z-index:1;}
-header{display:flex;flex-direction:column;align-items:center;text-align:center;margin-bottom:60px;}
-header h1{font-size:2.4rem;margin:16px 0 6px;}
-header p.lead{color:var(--muted);font-size:1.1rem;line-height:1.6;max-width:800px;margin:0 auto;}
-.avatar-container{
-  width:250px;height:250px;border-radius:50%;overflow:hidden;margin-bottom:30px;
-}
-.avatar-container img{width:100%;height:100%;object-fit:cover;transition: transform 0.5s ease;}
-.avatar-container img:hover{ transform: scale(1.05); }
+/* Background Layers */
+#background-container{position:fixed; top:0; left:0; width:100%; height:100%; z-index:0; overflow:hidden;}
+.background-1, .background-2{position:absolute; top:0; left:0; width:100%; height:100%; display:block; background-size:cover;}
+
+/* Header */
+header{display:flex; flex-direction:column; align-items:center; text-align:center; margin-bottom:60px; z-index:2;}
+header h1{font-size:2.4rem; margin:16px 0 6px;}
+header p.lead{color:var(--muted); font-size:1.1rem; line-height:1.6; max-width:800px; margin:0 auto;}
+
+/* Avatar */
+.avatar-container{width:250px;height:250px;border-radius:50%;overflow:hidden;margin-bottom:30px; border:4px solid var(--accent);}
+.avatar-container img{width:100%;height:100%;object-fit:cover; transition: transform 0.5s ease;}
+.avatar-container img:hover{transform: scale(1.05);}
 
 /* Projects */
-.project-section{width:100%; max-width:1000px;}
+.project-section{width:100%; max-width:1000px; margin-bottom:50px;}
 .section-title{margin-bottom:32px; text-align:left;}
-.project{
-  background:var(--card-bg);
-  padding:32px;
-  border-radius:16px;
-  margin-bottom:32px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.project:hover{
-  transform: translateY(-8px);
-  box-shadow: 0 20px 40px rgba(0,0,0,0.5);
-}
+.project{background:var(--card-bg); padding:32px; border-radius:16px; margin-bottom:32px; transition: transform 0.3s ease, box-shadow 0.3s ease;}
+.project:hover{transform: translateY(-8px); box-shadow: 0 20px 40px rgba(0,0,0,0.5);}
 .project h3{margin-top:0;}
-.project .tags{display:flex;flex-wrap:wrap;gap:12px;margin-top:12px;}
-.project .tag{font-size:12px;padding:6px 12px;border-radius:10px;background:#1a1a1a;color:var(--muted);}
-.project .cta{display:inline-block;padding:10px 14px;border-radius:10px;background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--accent);text-decoration:none;transition:all 0.3s;}
-.project .cta:hover{background:var(--accent);color:#0f0f0f;}
+.project .tags{display:flex; flex-wrap:wrap; gap:12px; margin-top:12px;}
+.project .tag{font-size:12px; padding:6px 12px; border-radius:10px; background:#1a1a1a; color:var(--muted);}
+.project .cta{display:block; margin-top:16px; padding:10px 14px; border-radius:10px; background:transparent; border:1px solid rgba(255,255,255,0.06); color:var(--accent); text-decoration:none; width:fit-content; transition: all 0.3s;}
+.project .cta:hover{transform: scale(1.1); box-shadow: 0 0 15px var(--accent); background:rgba(6,182,212,0.2);}
 
 /* About */
 .about{margin-top:60px; max-width:800px; text-align:left;}
-.about p{color:var(--muted);line-height:1.6;font-size:1.05rem;}
-
-/* Footer */
-footer{margin-top:60px;color:var(--muted);text-align:center;font-size:13px;}
+.about p{color:var(--muted); line-height:1.6; font-size:1.05rem;}
 
 /* Quick Links */
-.quick-links{margin-top:32px; display:flex;flex-wrap:wrap; gap:12px;}
-.quick-links a{color:var(--accent); text-decoration:none; border:1px solid rgba(255,255,255,0.1); padding:10px 14px; border-radius:10px; transition:all 0.3s;}
-.quick-links a:hover{background:var(--accent);color:#0f0f0f;}
+.quick-links{margin-top:32px; display:flex; flex-wrap:wrap; gap:12px;}
+.quick-links a{color:var(--accent); text-decoration:none; border:1px solid rgba(255,255,255,0.1); padding:10px 14px; border-radius:10px; transition: all 0.3s;}
+.quick-links a:hover{background:var(--accent); color:#0f0f0f; transform: scale(1.05);}
+
+/* Footer */
+footer{margin-top:60px; color:var(--muted); text-align:center; font-size:13px;}
 
 /* Responsive */
 @media(max-width:900px){
@@ -91,7 +78,7 @@ footer{margin-top:60px;color:var(--muted);text-align:center;font-size:13px;}
 <div class="container">
   <header>
     <div class="avatar-container">
-      <img src="https://drive.google.com/file/d/1a6xrPsUJ2zaGLOVXVqZlUabevvxWsGMx/view?usp=sharing" alt="Mohanad Tarek">
+      <img src="https://drive.google.com/uc?export=view&id=1a6xrPsUJ2zaGLOVXVqZlUabevvxWsGMx" alt="Mohanad Tarek">
     </div>
     <h1>Mohanad Tarek</h1>
     <p class="lead">Backend Developer • Node.js, Express, MongoDB — Learning React, Next.js & UI/UX</p>
